--- a/README.Rmd
+++ b/README.Rmd
@@ -1,14 +1,24 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # blup
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-blup is a standard analytical package for implementing BLUPF90 software
-programs using R for single and multi-trait methods and single-step
-analysis in the breeding pipeline
+blup is a standard analytical package for implementing BLUPF90 software programs using R for single and multi-trait methods and single-step analysis in the breeding pipeline
 
 ## Installation
 
@@ -23,15 +33,14 @@ devtools::install_github("leonardosgloria/blup")
 
 This is a basic example which shows you how to solve a common problem:
 
-``` r
+```{r example}
 library(blup)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`?
-You can include R chunks like so:
+What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-``` r
+```{r }
 ###test Masuda multitrait analysis
 
 datarenum1 <- data.frame(matrix(
@@ -79,10 +88,9 @@ c(1,0,0
 ,15,11,10),ncol = 3,byrow = T)
 
 write.table(pedigree_renumf90,"pedigreef90.txt")
+
+
+
 ```
 
-You’ll still need to render `README.Rmd` regularly, to keep `README.md`
-up-to-date. `devtools::build_readme()` is handy for this. You could also
-use GitHub Actions to re-render `README.Rmd` every time you push. An
-example workflow can be found here:
-<https://github.com/r-lib/actions/tree/v1/examples>.
+You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
